优化视觉交互

--- a/manifest.json
+++ b/manifest.json
@@ -26,5 +26,6 @@
         "tabs",
         "http://*/*",
         "file:///*/*"
-    ]
+    ],
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
